Requires:
~~~~~~~~~
- CPSUtil > 0.5.3
New features:
~~~~~~~~~~~~~
- Adding hierarchical support for LDAPBackingDirectory (and Stacking/Meta)
Bug fixes:
~~~~~~~~~~
- Replaced incorrect code producing broken urls using virtual hosting.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- DirectoryWidget handle a root_uid which can be different from the directory
  root, this enable to display just a part of a hierarchical directory.
- DirectoryWidget improve xhtml